--- a/index.html
+++ b/index.html
@@ -15,10 +15,6 @@
     <nav id="header-nav" class="navbar navbar-default">
       <div class="container">
         <div class="navbar-header">
-          <a href="index.html" class="pull-left visible-md visible-lg">
-            <div id="logo-img"></div>
-          </a>
-
           <div class="navbar-brand">
             <a href="index.html"><h1>Food,LLC</h1></a>
           </div>
@@ -34,16 +30,16 @@
         <div id="collapsable-nav" class="collapse navbar-collapse">
            <ul id="nav-list" class="nav navbar-nav navbar-right">
             <li>
-              <a href="menu-categories.html">
-                <br class="hidden-xs"> Chicken</a>
+              <a href="#">
+                <span class="glyphicon glyphicon-cutlery"></span><br class="hidden-xs"> chicken</a>
             </li>
             <li>
               <a href="#">
-                <br class="hidden-xs"> Beef</a>
+                <span class="glyphicon glyphicon-info-sign"></span><br class="hidden-xs"> beef</a>
             </li>
             <li>
               <a href="#">
-                <br class="hidden-xs"> Sushi</a>
+                <span class="glyphicon glyphicon-certificate"></span><br class="hidden-xs"> sushi</a>
             </li>
           </ul><!-- #nav-list -->
         </div><!-- .collapse .navbar-collapse -->
@@ -52,6 +48,9 @@
   </header>
 
   </div>
+
+
+  <!-- jQuery (Bootstrap JS plugins depend on it) -->
   <script src="js/jquery-2.1.4.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/script.js"></script>
